# gravWH

./: .gitignore  AWS_SETUP.md  CHANGELOG.md  CONTRIBUTING.md  CURSOR_REFRESH.md  GITHUB_SETUP.md  LICENSE  PROJECT_STATUS.txt  PROJECT_SUMMARY.md  README.md  analyze_missed_detection.py  catch_missed_signal.py  download_gw_events.py  download_more_o1_clean.py  evaluate_model.py  gravitational_wave_demo.py  modular_wrapper.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_modular_pipeline.py  simple_gw_demo.py  simple_modular_training.py  tatus  test_gw_notebook.py  truly_modular_training.py
.github/: BRANCH_PROTECTION.md
.github/workflows/: ci.yml  compile-latex.yml  release.yml  tests.yml
assets/: github_banner.py
docs/: algorithms.md  api.md  cwt_lstm_autoencoder_guide.md  data_sources.md  physics.md  versioning.md
examples/: __init__.py  example_usage.py  precision_recall_analysis.py  view_precision_recall_plots.py
focused_search_results/: best_config.json  detailed_results.json  results_summary.csv
gravitational_wave_hunter/: __init__.py  detector.py
gravitational_wave_hunter/data/: __init__.py  ligo_data_loader.py  loader.py  modular_training_pipeline.py  simple_training_pipeline.py
gravitational_wave_hunter/evaluation/: __init__.py  advanced_metrics.py
gravitational_wave_hunter/models/: __init__.py  autoencoder.py  base.py  cnn_lstm.py  cwt_lstm_autoencoder.py  cwt_transformer_autoencoder.py  transformer.py  wavenet.py
gravitational_wave_hunter/scripts/: __init__.py  detect.py  evaluate.py  train.py
gravitational_wave_hunter/signal_processing/: __init__.py  preprocessing.py
gravitational_wave_hunter/utils/: __init__.py  config.py  helpers.py  metrics.py
gravitational_wave_hunter/visualization/: __init__.py  plotting.py
ligo_data_cache/: O1_H1_1126250000_4_4096.npz  O1_H1_1126250100_4_4096.npz  O1_H1_1126250200_4_4096.npz  O1_H1_1126250300_4_4096.npz  O1_H1_1126250400_4_4096.npz  O1_H1_1126250500_4_4096.npz  O1_H1_1126250600_4_4096.npz  O1_H1_1126250700_4_4096.npz  O1_H1_1126250800_4_4096.npz  O1_H1_1126250900_4_4096.npz  O1_H1_1126251000_4_4096.npz  O1_H1_1126251100_4_4096.npz  O1_H1_1126251200_4_4096.npz  O1_H1_1126251300_4_4096.npz  O1_H1_1126251400_4_4096.npz  O1_H1_1126251500_4_4096.npz  O1_H1_1126251600_4_4096.npz  O1_H1_1126251700_4_4096.npz  O1_H1_1126251800_4_4096.npz  O1_H1_1126251900_4_4096.npz  O1_H1_1126252000_4_4096.npz  O1_H1_1126252100_4_4096.npz  O1_H1_1126252200_4_4096.npz  O1_H1_1126252300_4_4096.npz  O1_H1_1126252400_4_4096.npz  O1_H1_1126252500_4_4096.npz  O1_H1_1126252600_4_4096.npz  O1_H1_1126252700_4_4096.npz  O1_H1_1126252800_4_4096.npz  O1_H1_1126252900_4_4096.npz  O1_H1_1126253000_4_4096.npz  O1_H1_1126253100_4_4096.npz  O1_H1_1126253200_4_4096.npz  O1_H1_1126253300_4_4096.npz  O1_H1_1126253400_4_4096.npz  O1_H1_1126253500_4_4096.npz  O1_H1_1126253600_4_4096.npz  O1_H1_1126253700_4_4096.npz  O1_H1_1126253800_4_4096.npz  O1_H1_1126253900_4_4096.npz  (+179 more)
notebooks/: cwt_lstm_autoencoder.py  example_usage.py  gravitational_wave_detection_demo.ipynb  precision_recall_analysis.py  view_precision_recall_plots.py
paper/: main.tex  references.bib
paper/data/: results.json
paper/scripts/: update_results.py
paper/sections/: results.tex
quick_test_results/: best_config.json  detailed_results.json  results_summary.csv
results/: README.md  run_history.json
scripts/: README_hyperparameter_optimization.md  analyze_hyperparameter_results.py  create_better_diagram.py  create_cwt_real_data.py  focused_hyperparameter_search.py  hyperparameter_grid_search.py  modular_wrapper.py  quick_hyperparameter_test.py  run_hyperparameter_optimization.py  track_run.py  version.py
tests/: README.md  __init__.py  conftest.py  pytest.ini  run_tests.py  test_cwt_preprocessing.py  test_data_generation.py  test_data_loader.py  test_detector.py  test_evaluation.py  test_model_architecture.py  test_models.py  test_preprocessing.py  test_simple.py  test_training.py  test_utils.py  test_visualization.py
